@@ -1,3 +1,9 @@
+2015-09-08  Mark Wielaard  <mjw@redhat.com>
+
+	* libdwflP.h (struct __libdwfl_pid_arg): Add elf and elf_fd.
+	* linux-pid-attach.c (pid_detach): Call elf_end and close.
+	(dwfl_linux_proc_attach): Open and save /proc/PID/exe.
+
 2015-09-04  Chih-Hung Hsieh  <chh@google.com
 
 	* frame_unwind.c (expr_eval): Use llabs instead of abs.
